--- a/blog/templates/blog/all-posts.html
+++ b/blog/templates/blog/all-posts.html
@@ -16,7 +16,7 @@
         <ul>
             {% for post in all_posts %}
                 {% include "blog/includes/post.html" %}
-            {% endblock %}
+            {% endfor %}
         </ul>
     </section>
 {% endblock %}
