--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,11 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}
-    All Posts
-{% endblock %}
-
-{% block csss_files %}
+{% block css_files %}
     <link rel="stylesheet" href='{% static "blog/post.css" %}' />
     <link rel="stylesheet" href='{% static "blog/index.css" %}' />
 {% endblock %}
